--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.72"
+async-trait = "0.1.72"
+derive_more = "0.99.17"
+ezsockets = { version = "0.5.1", features = ["native-tls"] }
+http = "0.2.9"
+reqwest = { version = "0.11.18", features = ["json", "cookies"] }
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.104"
+thiserror = "1.0.44"
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+url = "2.4.0"
