--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,6 @@
-unstable_features = true
+# unstable_features = true
 
 max_width = 80
 
-imports_granularity = "Crate"
-group_imports = "StdExternalCrate"
+# imports_granularity = "Crate"
+# group_imports = "StdExternalCrate"
